feat: add json validation for metadata/personalization/data/collected-data/nomenclature